Some styling fixes, mainly on dark mode. Still lacking responsivity.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,7 @@ html{
 body{
     font-family: 'Roboto', sans-serif;
     background-color: var(--body-color);
+    color: var(--title-color);
 }
 
 body.dark-theme{
@@ -148,7 +149,7 @@ div.cont-icons > span.cart-count{
     width: 1rem;
     height: 1rem;
     font-size: 10px;
-    background-color: var(--button-color);
+    background-color: var(--title-color);
     color: var(--container-color);
     display: flex;
     justify-content: center;
@@ -289,7 +290,9 @@ div.category-title > h5{
 
 section.store > div.products-father{
     display: grid;
+    padding-top: 2rem;
     grid-template-columns: 1fr;
+    row-gap: 1rem;
     justify-content: center;
     align-items: center;
 }
